--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,12 @@
 <div class="top-bar">
+    {%- assign default_paths = site.pages | map: "path" -%}
+    {%- assign page_paths = site.header_pages | default: default_paths -%}
+
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Site Title</li>
+            <li class="menu-text">
+                {{ site.title | escape }}
+            </li>
             <li>
                 <a href="#">One</a>
                 <ul class="menu vertical">
@@ -16,6 +21,14 @@
     </div>
     <div class="top-bar-right">
         <ul class="menu">
+            {%- for path in page_paths -%}
+            {%- assign my_page = site.pages | where: "path", path | first -%}
+            {%- if my_page.title -%}
+            <li>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            </li>
+            {%- endif -%}
+            {%- endfor -%}
             <li><input type="search" placeholder="Search"></li>
             <li><button type="button" class="button">Search</button></li>
         </ul>
