--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,7 +2,7 @@
   {%- if site.instagram_username -%}
   <li>
     <a href="https://instagram.com/{{ site.instagram_username| cgi_escape | escape }}">
-      <i style="fill: #828282 !important;" class="fab fa-instagram"></i>
+      <i class="fab fa-instagram"></i>
       <span class="username">{{ site.instagram_username| escape }}</span>
     </a>
   </li>
