--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,12 +24,12 @@
             {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <li>
+            <li class="{% if my_page.url == page.url %}active{% endif %}">
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             </li>
             {%- endif -%}
             {%- endfor -%}
-            <li><input type="search" placeholder="Search"></li>
+            <li><input id="header-searchbar" type="search" placeholder="Search"></li>
             <li><button type="button" class="button">Search</button></li>
         </ul>
     </div>
