--- a/_layouts/default-foundation.html
+++ b/_layouts/default-foundation.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+  {%- include head-f.html -%}
 
   <body>
 
-  {%- include header.html -%}
+  {%- include header-f.html -%}
 
   <main class="page-content grid-container" aria-label="Content">
-    <div class="wrapper grid-x grid-padding-x">
-      {{ content }}
-    </div>
+    {{ content }}
   </main>
 
   {%- include footer.html -%}
