login form working

--- a/_includes/head-f.html
+++ b/_includes/head-f.html
@@ -6,6 +6,8 @@
   <script src="https://kit.fontawesome.com/3fb25a33d5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{{ "/vendor/foundation/css/foundation.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/vendor/foundation/css/foundation-float.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/vendor/foundation/css/foundation-prototype.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/vendor/foundation/css/foundation-icons/foundation-icons.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/site.css" | relative_url }}">
 
   {%- feed_meta -%}
