--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -4,6 +4,57 @@
     border-radius: 0;
 }
 
+.show-password label {
+    position: absolute;
+    left: -9999px;
+    text-indent: -9999px;
+}
+
+.password-wrapper {
+    position: relative;
+}
+
+.password + .unmask {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    text-indent: -9999px;
+    width: 25px;
+    height: 25px;
+    background: #aaa;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    -webkit-appearance: none;
+}
+
+.password + .unmask:before {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 17px;
+    height: 17px;
+    background: #e3e3e3;
+    z-index: 1;
+    border-radius: 50%;
+}
+
+.password[type="text"] + .unmask:after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 13px;
+    height: 13px;
+    background: #aaa;
+    z-index: 2;
+    border-radius: 50%;
+}
+
 
 .progress-indicator {
     list-style: none;
@@ -94,4 +145,24 @@
     color: #4eabe9;
 }
 
+.or-divider {
+    position: relative;
+    margin: 1.5rem 0px;
+    font-size: 14px;
+    font-weight: 600;
+    width: 100%;
+    height: 0px;
+    border: 1px solid #e6e6e6;
+}
 
+.or-divider span {
+    color: #8a8a8a;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: -12px;
+    background-color: #fefefe;
+    padding: 0 8px;
+}
