--- a/_layouts/default-foundation.html
+++ b/_layouts/default-foundation.html
@@ -15,6 +15,7 @@
 
     <script src="{{ site.baseurl }}/vendor/jquery/js/jquery.js" type="text/javascript"></script>
     <script src="{{ site.baseurl }}/vendor/foundation/js/foundation.js" type="text/javascript"></script>
+    <script src="{{ site.baseurl }}/assets/js/youtube.js" type="text/javascript"></script>
     <script src="{{ site.baseurl }}/assets/js/site.js" type="text/javascript"></script>
 
   </body>
