Site ready to go for week-1

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">
-                {{ site.title | escape }}
+                <a href="/">{{ site.title | escape }}</a>
             </li>
             <li>
                 <a href="#">One</a>
