--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
   {%- seo -%}
   <script src="https://kit.fontawesome.com/3fb25a33d5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.5.3/css/foundation.css" integrity="sha256-Ed7kL1p/BVuHCwGSEpUib2v9K7JtkCQlX4CweQEimJo=" crossorigin="anonymous" />
-  <link href="https://cdn.plyr.io/3.5.6/plyr.css" rel="stylesheet" />
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/site.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/audio-player.css" | relative_url }}">
+
+  <link rel="icon" type="image/png" href="favicon.ico">
 
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
