--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/site.css" | relative_url }}">
 
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="icon" type="image/png" href="{{ my_page.url | relative_url }}/favicon.ico">
+
 
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
