--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,10 @@
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">
-                <a href="/">{{ site.title | escape }}</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">
+                    <img src="{{ site.baseurl }}/assets/images/logo.svg" alt="TutorD Logo">
+                    <script src="{{ site.baseurl }}/assets/js/site.js" type="text/javascript"></script>
+                </a>
             </li>
         </ul>
     </div>
@@ -15,10 +18,7 @@
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <li>
-<!--                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>-->
-                <a class="page-link" href="{{ my_page.url | relative_url }}">
-                    <img src="" alt="">
-                </a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             </li>
             {%- endif -%}
             {%- endfor -%}
@@ -27,4 +27,4 @@
         </ul>
     </div>
 </header>
-    
+
