--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
             <li class="menu-text">
-                <a class="page-link" href="{{ my_page.url | relative_url }}">
+                <a class="page-link" href="{{ site.baseurl }}/">
                     <img src="{{ site.baseurl }}/assets/images/logo.svg" alt="TutorD Logo">
                     <script src="{{ site.baseurl }}/assets/js/site.js" type="text/javascript"></script>
                 </a>
