--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,3 +1,12 @@
 .site-header {
     background-color: yellow;
 }
+.main-page-class {
+    background-color: #2a7ae2";   
+    height: 100%;
+    width 100%;
+}
+
+/*
+this is a comment
+*/
