modified index.html file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,15 +8,15 @@
                 {{ site.title | escape }}
             </li>
             <li>
-                <a href="#">One</a>
+                <a href="#">Personal Projects</a>
                 <ul class="menu vertical">
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">Two</a></li>
-                    <li><a href="#">Three</a></li>
+                    <li><a href="#">Autonomous Flight</a></li>
+                    <li><a href="#">Clean Water</a></li>
+                    <li><a href="#">Education</a></li>
                 </ul>
             </li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
+            <li><a href="#">NASA Projects</a></li>
+            <li><a href="#">TitanSat</a></li>
         </ul>
     </div>
     <div class="top-bar-right">
